--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router": "3.x"
+    "react-router": "3.x",
+    "styled-components": "^2.0.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
