--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "next",
+    "react-motion": "^0.5.0",
     "react-router": "3.x",
+    "react-zoomy": "^1.1.1",
     "styled-components": "^2.0.1"
   },
   "devDependencies": {
