--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "next",
+    "react-image-parallax2": "^0.1.6",
     "react-motion": "^0.5.0",
     "react-router": "3.x",
     "react-zoomy": "^1.1.1",
