--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-motion": "^0.5.0",
     "react-router": "3.x",
     "react-zoomy": "^1.1.1",
+    "really-smooth-scroll": "^2.1.1",
     "styled-components": "^2.0.1"
   },
   "devDependencies": {
